@@ -1,3 +1,3 @@
-EBUILD ecore-9999.ebuild 5085 RMD160 0cc24aaef9668fda40143bca66cc00a3ab9d45ce SHA1 589097cd323d41b8933b432dcf7cca44c7c1bd2f SHA256 26da9d75ba9fe92c5b9d187e8f580a5f8bbc5b0e16fc0a30754ac3b852ecc275
-MISC ChangeLog 522 RMD160 f5316902827a434cce54a5f333297dcd0a2eb6a0 SHA1 33a92b92448ea869dc73d85ea53f72376a248d3e SHA256 c7962ddaedeb32c598a0b30a2c758870d9a281b5fc93b2ea1980abd02afd3a01
+EBUILD ecore-9999.ebuild 4990 RMD160 454e1b54604a880c0f415c3649afcc384d81bb58 SHA1 0851777c7c880038c572f0a8ea02ab098a4f68f6 SHA256 659f05fbdd414d62c3ac5798ab98e0b8b48a07425d004928352bab3ee03d87ee
+MISC ChangeLog 607 RMD160 b64ed2a2f97189d4b992ca3a3de43eca18542ba6 SHA1 95f4171c6250db0b0f5587685929afccbda00406 SHA256 2e680706fba56d58be92085c675ac2c9a575cfc0fc0badbbfce880e233310da7
 MISC metadata.xml 2993 RMD160 f97511c5979a0ec44d7a5f002dceaab385354d7a SHA1 4a051cacb0cbddf5a495c862e3f98c97ade175f5 SHA256 a71f8792d107a4efe8393fc536420e5a1aad1921b95d04dd6afd741a73a4c726
