@@ -1,4 +1,4 @@
 AUX 50edje-gentoo.el 222 RMD160 a8a9387b405f6d525a68dd5534363d8736494f6c SHA1 8c5880780185eeca372e477fe42386b196ca6f13 SHA256 6dd339607b505d430438f4f3e191721d9fc523303b4a88dd1af933f0c1686828
-EBUILD edje-9999.ebuild 1337 RMD160 7aeee549307f82f7f1e871d2e0f69e151a8ad7e8 SHA1 b3b222362959a33d82e6f3449eb608c7f8407618 SHA256 391da684f9df41e5a60d5a6d1245411b8f22b90162a9426819a72c6f02e51f1f
-MISC ChangeLog 225 RMD160 e02c2a9c375ddbc5ccad4ba583041ae3b1fb41fd SHA1 c31002360982d790585d4421ca309757942d7480 SHA256 264a4721049ceed532d700eebeb00fb95fb795146ed5b40df361943ef9372fa9
+EBUILD edje-9999.ebuild 1338 RMD160 251599d1100b11f93b8c9019759f55a88de685b0 SHA1 4d5554b49632e56d90af2dc715d9a1fd3cf222f6 SHA256 3ef7d4801adcc24948d4b6f832545127f039c69230d66c01a1288e846c71c8a9
+MISC ChangeLog 309 RMD160 1ca1d7bc035e7b99883d4660b9c0b50a86091002 SHA1 8968b0a7d6c7deba4e6880f521dfc33140017fcc SHA256 568ffb7654fd2c319bad7c555038aa1f1de461fb22844d059e89684cc7297cf2
 MISC metadata.xml 3281 RMD160 05dd843d1c9911125e2e40b2607a0821ba0eebab SHA1 cef732c08f3a3b77b136936d00cac94090f253d6 SHA256 45074e391b02f4c0bf8d46664de37684bd10df2aa782ff228a969a6a95c8510c
