@@ -1,3 +1,3 @@
-EBUILD elementary-9999.ebuild 625 RMD160 785508ac17bfec4f1735b6e481a2a6c7a985ff2f SHA1 75415a40bf512d9c5ae8b2ee3a804e723b76fd7b SHA256 6a246b96f0e534c4e97a702cbd086712179079be30510c21d93af027df4add42
-MISC ChangeLog 197 RMD160 58d0542abceb34f59376e96cae35a63312485a1d SHA1 95584c77bb0ba7321d161fec159d0e38d84b8504 SHA256 2143cfba4451364f570e24b7e2bed0a59b274631461b1096334daeed34fed091
+EBUILD elementary-9999.ebuild 812 RMD160 037cff54f91c0606dddf5f8f7fcdd8ee77b4f829 SHA1 388a01af63a83014cde4da371d28f10ca357b5d8 SHA256 98f0aff96a3ea149e11fc5a3776f2276526a1e740b934440c974eb2126e50bf6
+MISC ChangeLog 289 RMD160 c8a1e36342c3f6e7379295890b144b35626b1afd SHA1 e1be7f7fda9002b847d9150860d262b56bffe0d9 SHA256 e393ce4dddbc0a1425e7db41ddf1ebde1973d62dba215658188874d7ca026cf4
 MISC metadata.xml 1237 RMD160 1e1b57df47231797f5e1c5c57824fbc149855da0 SHA1 564e66e2c1db4b9c352b902fd2c82810752e0658 SHA256 27722f6c78264a802ef4a92435ac1645aa022277b34736e389844d08f21385ee
