@@ -1,6 +1,9 @@
-# ChangeLog for x11-libs/elementary
+# ChangeLog for media-libs/elementary
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  26 Feb 2010; evadim <evadim@evadim.ru> elementary-9999.ebuild:
+  sync to e.org version
 
   16 Jan 2010; evadim <evadim@evadim.ru> elementary-9999.ebuild:
   fix deps
